<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.onboarding.Slide3Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/slide_margin" >

        <ImageView
            android:id="@+id/slide_img"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".65"
            android:src="@drawable/ic_time"
            android:contentDescription="@string/imgDesc_slideImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tv_slideTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/slideTitle_textSize"
            android:fontFamily="@font/aileron_regular"
            android:textAlignment="center"
            android:text="@string/tv_title3"
            android:textColor="@color/yellow_400"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slide_img" />

        <TextView
            android:id="@+id/tv_slideDesc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintWidth_percent=".8"
            android:fontFamily="@font/aileron_semi_bold"
            android:paddingLeft="@dimen/slideDesc_padding"
            android:paddingRight="@dimen/slideDesc_padding"
            android:text="@string/tv_description3"
            android:textSize="@dimen/slideDescription_textSize"
            android:textColor="@color/slide_gray"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.19"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slideTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>